<resources>
    <string name="app_name">LostPals</string>
<!--Welcome-->
    <string name="welcome_title">Welcome to</string>
    <string name="welcome_lostpals">LostPals!</string>
    <string name="welcome_back_title">Welcome back to</string>"
    <string name="welcome_sub">Did you lost an item?\nLet our community help you find it!</string>

<!--Register-->
    <string name="register_title">Register</string>
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="link_login">Already have an account? Login</string>

<!--Login-->
    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="btn_login">Sign in</string>
    <string name="link_register">Don\'t have an account? Register</string>
    <string name="logout">Logout</string>
    <string name="create_post">create_post</string>
    <string name="inbox">inbox</string>
    <string name="account">account</string>
    <string name="filter">filter</string>

<!--Avatar-->
    <string name="avatar">Users avatar</string>
    <string name="profile_title">Profile</string>
    <string name="username_placeholder">username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="current_password">Current password</string>
    <string name="new_password_optional">New password</string>
    <string name="current_email">Current e-mail</string>
    <string name="new_email_optional">New e-mail</string>
    <string name="leave_blank">Leave blank to keep unchanged</string>
    <string name="change_password_note">Change your password</string>
    <string name="change_email_note">Change your e-mail address</string>

<!-- DM -->
    <string name="back_button_desc">Back</string>
    <string name="avatar_desc">Avatar</string>
    <string name="attach_button_desc">Attach</string>
    <string name="send_button_desc">Send</string>
    <string name="message_hint">Message</string>
    <!-- format pentru numele persoanei cu care userul discuta -->
    <string name="chat_username_format">%1$s</string>
    <!-- format pentru data conversației -->
    <string name="message_date_format">%1$s</string>

<!--POST-->
    <string name="open_chat">Chat</string>
</resources>