<?xml version="1.0" encoding="utf-8"?>
<!-- bara de navigare -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:minHeight="50dp"
    android:background="@color/primary"
    android:elevation="4dp">

    <LinearLayout
        android:id="@+id/leftSection"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- titlul aplicatiei -->
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quando_regular"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- butoane creare postare, inbox si profil -->
    <LinearLayout
        android:id="@+id/rightSection"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- buton creare post -->
        <ImageView
            android:id="@+id/createPostIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/create_post"
            android:src="@drawable/create_post"/>

        <!-- buton inbox -->
        <ImageView
            android:id="@+id/Inbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/inbox"
            android:src="@drawable/inbox"/>

        <!-- buton profil/account -->
        <ImageView
            android:id="@+id/accountIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/account"
            android:src="@drawable/account"/>
    </LinearLayout>

    <!-- aliniere pe orizontala -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <!-- aliniere pe verticala -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"/>

    <!-- barrier pentru aliniere dinamica -->
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"/>

    <!-- guideline pentru spatiere -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
